# academic-cluster-py

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  uv.toml
.github/workflows/: ci.yml  release.yml
docker/postgres/: init.sql
docs/: admin-panel-plan.md  answer.md  architecture.md  pipeline.txt  question.xlsx
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/.agents/skills/responsive-design/: SKILL.md  SKILL.toon
frontend/src/: App.vue  style.css
frontend/src/api/: admin.ts  auth.ts  client.ts  console.ts  projects.ts
frontend/src/components/: LlmCallsTable.vue  PipelineProgress.vue  ReviewArticle.vue
frontend/src/components/action-menu/: ActionMenu.vue  index.ts  types.ts
frontend/src/components/advanced-table/: AdvancedTable.vue  index.ts  types.ts
frontend/src/components/audio/: Audio.vue  index.ts  types.ts
frontend/src/components/autocomplete/: Autocomplete.vue  index.ts  types.ts
frontend/src/components/avatar/: Avatar.vue  AvatarGroup.vue  index.ts  types.ts
frontend/src/components/billing/: Billing.vue  index.ts  types.ts
frontend/src/components/breadcrumb/: Breadcrumb.vue  index.ts  types.ts
frontend/src/components/calendar/: Calendar.vue  index.ts  types.ts
frontend/src/components/cascader/: Cascader.vue  index.ts  types.ts
frontend/src/components/charts/: Chart.vue  StatCard.vue  index.ts  types.ts
frontend/src/components/checkbox/: CheckboxGroup.vue  index.ts  types.ts
frontend/src/components/code-block/: CodeBlock.vue  index.ts  types.ts
frontend/src/components/code-editor/: CodeEditor.vue  index.ts  types.ts
frontend/src/components/color-picker/: ColorPicker.vue  index.ts  types.ts
frontend/src/components/combobox/: Combobox.vue  index.ts  types.ts
frontend/src/components/command-menu/: CommandMenu.vue  index.ts  types.ts
frontend/src/components/confirm-dialog/: ConfirmDialog.vue  index.ts  types.ts  useConfirm.ts
frontend/src/components/data-table/: DataTable.vue  index.ts  types.ts
frontend/src/components/date-range-picker/: DateRangePicker.vue  index.ts  types.ts
frontend/src/components/description/: Description.vue  index.ts  types.ts
frontend/src/components/description-list/: DescriptionList.vue  index.ts  types.ts
frontend/src/components/drawing/: Drawing.vue  index.ts  types.ts
frontend/src/components/dropdown-select/: DropdownSelect.vue  index.ts  types.ts
frontend/src/components/empty-state/: EmptyState.vue  types.ts
frontend/src/components/error-state/: ErrorState.vue  index.ts  types.ts
frontend/src/components/file-upload/: FileUpload.vue  index.ts  types.ts
frontend/src/components/form/: Form.vue  FormField.vue  index.ts  types.ts
frontend/src/components/global-search/: GlobalSearch.vue  index.ts  types.ts
frontend/src/components/grid/: Grid.vue  index.ts  types.ts
frontend/src/components/image/: Image.vue  index.ts  types.ts
frontend/src/components/json-editor/: JsonEditor.vue  index.ts  types.ts
frontend/src/components/kanban/: Kanban.vue  index.ts  types.ts
frontend/src/components/list/: List.vue  index.ts  types.ts
frontend/src/components/loading-state/: LoadingState.vue  index.ts  types.ts
frontend/src/components/map/: Map.vue  index.ts  types.ts
frontend/src/components/markdown/: Markdown.vue  index.ts  types.ts
frontend/src/composables/: useAuth.ts  useFeatures.ts  usePolling.ts  useProjectProgress.ts  useProjectReview.ts  useSSE.ts
frontend/src/i18n/: en.ts  index.ts  locales.ts  zh.ts
frontend/src/layouts/: AppLayout.vue
frontend/src/lib/: usage-display.ts  utils.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/views/: AdminView.vue  ChatView.vue  DashboardView.vue  LoginView.vue  NewProjectView.vue  ProjectDetailView.vue  RegisterView.vue
scripts/: migrate_auth.sql  migrate_provider_registry.sql  setup.ps1  setup.sh
src/academic_cluster/: __init__.py  cli.py
src/academic_cluster/agents/: __init__.py  evidence_generation.py  kg_extraction.py  query_planning.py  section_evaluator.py  section_outline.py  writing.py
src/academic_cluster/api/: __init__.py  auth_routes.py  dependencies.py  main.py  routes.py  sse.py
src/academic_cluster/config/: __init__.py  settings.py
src/academic_cluster/graphs/: __init__.py  checkpoint.py  graph.py  state.py
src/academic_cluster/models/: __init__.py  cluster.py  paper.py  project.py  user.py  writing.py
src/academic_cluster/prompts/: __init__.py  assemble_review.md  cluster_targeted_refine.md  community_memory.md  decide_refinement.md  evaluate_search.md  gap_analysis_judge.md  generate_abstract.md  generate_outline.md  generate_outline_system.md  inter_community_conflict.md  kg_json_repair.md  paper_filter.md  parse_topic.md  refine_query.md  review_structure.md  review_style.md  section_evaluator.md  section_outline.md  topic_relevance_filter.md  write_section.md  write_system.md  writing_rules.py
src/academic_cluster/services/: __init__.py  auth.py  cache.py  citation_planner.py  citation_support.py  citation_utils.py  coverage_audit.py  crypto.py  database.py  llm_client.py  observability.py  provider_pool.py  review_finalizer.py  section_evidence_planner.py  source_config.py  vector_store.py
src/academic_cluster/tools/: __init__.py  academic_search.py  clustering.py  doi.py  json_repair.py  text_processing.py
tests/: conftest.py  e2e_test.py  test_topic_relevance_offline.py
tests/e2e/: test_pipeline.py
tests/integration/: test_embedding_api.py  test_rerank_api.py  test_search_api.py
tests/unit/: test_abstract_generation.py  test_bm25.py  test_citation_utils.py  test_clustering.py  test_community_memory.py  test_evidence_generation.py  test_gap_analysis.py  test_graph_routing.py  test_outline_generation.py  test_rerank_fallback.py  test_review_finalizer.py  test_section_evidence_planner.py  test_source_config.py  test_state.py  test_topic_relevance_filter.py  test_usage_observability.py  test_write_review_payload.py
(+203 files in other folders)
