[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "academic-cluster"
version = "0.1.0"
description = "Academic paper clustering, outline generation, and writing assistance using LangGraph"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Academic Cluster Team" },
]
keywords = ["academic", "research", "clustering", "langgraph", "ai-writing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # LangGraph & LangChain Core
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langsmith>=0.2.0",

    # LLM Providers
    "openai>=1.50.0",

    # Graph & Network Analysis
    "networkx>=3.3",

    # HTTP & API
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",

    # Configuration & Environment
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",

    # Async & Concurrency
    "anyio>=4.6.0",
    "tenacity>=9.0.0",

    # Logging & Monitoring
    "structlog>=24.4.0",
    "rich>=13.9.0",

    # Utilities
    "pyyaml>=6.0.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.11.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/your-org/academic-cluster"
Documentation = "https://your-org.github.io/academic-cluster"
Repository = "https://github.com/your-org/academic-cluster"
Issues = "https://github.com/your-org/academic-cluster/issues"

[project.scripts]
academic-cluster = "academic_cluster.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/academic_cluster"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.isort]
known-first-party = ["academic_cluster"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/academic_cluster"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise AssertionErrorError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
