[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "academic-cluster"
version = "0.1.0"
description = "Academic paper clustering, outline generation, and writing assistance using LangGraph"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Academic Cluster Team" },
]
keywords = ["academic", "research", "clustering", "langgraph", "ai-writing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # LangGraph & LangChain
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langsmith>=0.2.0",

    # LLM Providers
    "openai>=1.50.0",
    "anthropic>=0.34.0",
    "litellm>=1.80.0",

    # Data Processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",

    # Graph & Network Analysis
    "networkx>=3.3",
    "python-igraph>=0.11.0",
    "leidenalg>=0.10.0",

    # Vector Databases
    "chromadb>=0.5.0",

    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "psycopg[binary,pool]>=3.2.0",
    "langgraph-checkpoint-postgres>=3.0.0",

    # Redis
    "redis>=5.2.0",

    # HTTP & API
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",

    # NLP
    "tiktoken>=0.8.0",

    # Clustering
    # NOTE: sentence-transformers, umap-learn, hdbscan, plotly, pyvis removed —
    # not used in code; embedding/rerank/clustering all call external APIs

    # Configuration
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",

    # Async
    "anyio>=4.6.0",
    "tenacity>=9.0.0",

    # Logging
    "structlog>=24.4.0",
    "rich>=13.9.0",

    # Auth
    "PyJWT>=2.8.0",
    "argon2-cffi>=23.1.0",

    # Utilities
    "orjson>=3.10.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/your-org/academic-cluster"
Documentation = "https://your-org.github.io/academic-cluster"
Repository = "https://github.com/your-org/academic-cluster"
Issues = "https://github.com/your-org/academic-cluster/issues"

[project.scripts]
academic-cluster = "academic_cluster.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/academic_cluster"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["academic_cluster"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
