[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "academic-cluster"
version = "0.1.0"
description = "Academic paper clustering, outline generation, and writing assistance using LangGraph"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Academic Cluster Team" },
]
keywords = ["academic", "research", "clustering", "langgraph", "ai-writing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # LangGraph & LangChain
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langsmith>=0.2.0",

    # LLM Providers
    "openai>=1.50.0",
    "anthropic>=0.34.0",
    "litellm>=1.80.0",

    # Data Processing
    "numpy>=1.26.0",
    "scipy>=1.14.0",

    # Graph & Network Analysis
    "networkx>=3.3",
    "python-igraph>=0.11.0",

    # Vector Databases
    # chromadb removed — using pgvector instead

    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg[binary,pool]>=3.2.0",
    "langgraph-checkpoint-postgres>=3.0.0",

    # Redis
    "redis>=5.2.0",

    # HTTP & API
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",

    # NLP
    "tiktoken>=0.8.0",

    # Clustering
    # NOTE: sentence-transformers, umap-learn, hdbscan, plotly, pyvis removed —
    # not used in code; embedding/rerank/clustering all call external APIs

    # Configuration
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",

    # Async
    "anyio>=4.6.0",
    "tenacity>=9.0.0",

    # Logging
    "structlog>=24.4.0",
    "rich>=13.9.0",

    # Auth
    "PyJWT>=2.8.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=43.0.0",

    # Utilities
    "orjson>=3.10.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[project.urls]
Homepage = "https://github.com/c76d3656e/academic-cluster-py"
Repository = "https://github.com/c76d3656e/academic-cluster-py"
Issues = "https://github.com/c76d3656e/academic-cluster-py/issues"

[project.scripts]
academic-cluster = "academic_cluster.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/academic_cluster"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print (no print statements)
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "PTH",  # flake8-use-pathlib
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # use of assert (allowed in tests)
    "S603",   # subprocess call (too noisy for CLI tools)
    "S607",   # partial executable path
    "T201",   # print found (allow in CLI)
    "RET504", # unnecessary assignment before return
    "ARG001", # unused function argument (common in callbacks)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ARG001", "T201"]
"src/academic_cluster/cli.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["academic_cluster"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
